keep all related Influx services in the same repo

--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,1 @@
-export HAB_DOCKER_OPTS="-p 8082:8082 -p 8088:8088 -p 8086:8086"
+export HAB_DOCKER_OPTS="-p 8082:8082 -p 8086:8086 -p 8088:8088 -p 8888:8888"
